Looking into what is wrong

--- a/Announcement.html
+++ b/Announcement.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Announcement</title>
-	<link rel="stylesheet" href="Announcement.css">
+	<link rel="stylesheet" href="css/Announcement.css">
 	<style type="text/css">
 		
 		//a{ color:black;
