--- a/Home.html
+++ b/Home.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>home </title>
-	<link rel="stylesheet" href="Home.css">
+	<link rel="stylesheet" href="css/Home.css">
 	<style type="text/css">
 		
-	// a{ color:black;
+		// a{ color:black;
        text-decoration:none;
         font-size:2em;
         padding: 25px;
@@ -124,7 +124,7 @@
    <a href="https://www.facebook.com/mugabe.alexis.984/" target="_blank">
 	   <img src="imgs\f.jpg" width="25" height="25">
 	 </a>
-	 <a href="https://www.elemupro003@gmail.com/" target="_blank">
+	 <a href="https://www.alemupro003@gmail.com/" target="_blank">
    <img src="imgs\em.jpg" width="25" height="25">
    </a>
    <a href="https://www.twiter.com/elemupro003.com/" target="_blank">
