--- a/Gallery.html
+++ b/Gallery.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Gallery</title>
-	<link rel="stylesheet" href="Gallery.css">
+	<link rel="stylesheet" href="css/Gallery.css">
 	<style type="text/css">
 		
 		//a{ color:black;
