--- a/admin.html
+++ b/admin.html
@@ -4,68 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Admin</title>
-	<link rel="stylesheet" href="Admin.css">
-	<style type="text/css">
-		
-		//a{ color:black;
-       text-decoration:none;
-        font-size:2em;
-        padding: 25px;
-         }
-         
-		//.tabs{
-			display: flex;
-			padding-left: 150px;
-		}
-
-      
-
-
-		//.icons{
-			padding-left: 100px;
-		}
-		//.container{
-			
-			border-radius: 25px;
-		}
-		//.form{
-     padding-left: 35pc;
-     font-size: 1.5em;
- 
-		}
-		//.login{
-			padding-left: 42pc;
-			padding-top: 3pc;
-
-			border-color: rgb(115, 168, 214);
-		}
-		//.content{
-			padding-left: 42pc;
-		}
-
-		//.formula{
-			border-right:pc;
-			border-radius: 1pc;
-			background-color:rgba(212, 211, 211, 0.918);width: max-content;height: max-content;
-		}
-		//.footer{
-			padding-left: 5pc;
-		}
-		//.whole{
-      background-color:rgba(212, 211, 211, 0.918);
-      border-radius: 1pc;
-    }
-    .contact{
-      padding-left: 2pc;
-    }
-	img{
-		
-		left: 0px;
-		right: 0px;
-		
-	}
-		
-	</style>
+	<link href="css/">
+	<link href="css/Admin.css">
 </head>
 <body>
 	<div class="tabs"> 
