--- a/Home.html
+++ b/Home.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>home </title>
 	<link rel="stylesheet" href="css/Home.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<style type="text/css">
 		
 		// a{ color:black;
@@ -69,22 +70,19 @@
 	 <h4><a href="About us.html">About us</a></h4> 
 	 <h4><a href="Gallery.html">Gallery</a></p> 
 	 <h4><a href="Announcement.html">Announcement</a> </h4>
-	 <h4><a href="admin.html">Admin</a></h4>
-	 <h3><input type="text" name="search" placeholder="search here">
+	 <h4><a href="admin.html">Admin</a></h4><br>
+	 <h3><input type="text" name="search" placeholder="search........">
   </div>
-  <div class="become"><img src="imgs\bg1.jpg" width="1335" height="600"></div>
-  
-
-
-  
   <div class="content">
-  	<h1>WELCOME TO SAINT KIZITO SAVE</h1>
-  	<h1>TECHNICAL SECONDARY SCHOOL</h1>
-  </div>
+	<h1>WELCOME TO SAINT KIZITO SAVE</h1>
+	<h1>TECHNICAL SECONDARY SCHOOL</h1>
+</div>
+<img src="imgs\bg1.jpg" width="1335" height="600"></div>
+  
   <div class="all">
   <div class="title">
   	<h2>Our Missions</h2><br>
-  </div>
+  </div class="miss">
   	<ul>
   		<li>Success</li>
   		<li>Searching</li>
@@ -114,31 +112,32 @@
 
 
    <div class="whole">
-   <img src="imgs\w.jpg" width="25" height="25">07887401227<br><br>
-   <img src="imgs\f.jpg" width="25" height="25">Ecole Technic saint Kizito<br><br>
-   <img src="imgs\t.jpg" width="25" height="25">Ecole Technic saint Kizito<br><br>
-   <img src="imgs\em.jpg" width="25" height="25">stkizitosave@yahoo.fr<br><br><br>
-
-	
+	<i class="fa-brands fa-square-whatsapp"></i>07887401227<br><br>
+	<i class="fa-brands fa-facebook"></i>Ecole Technic saint Kizito<br><br>
+	<i class="fa-brands fa-twitter"></i>Ecole Technic saint Kizito<br><br>
+	<i class="fa-solid fa-envelope"></i>stkizitosave@yahoo.fr<br><br><br>
 	 <div class="icons">
    <a href="https://www.facebook.com/mugabe.alexis.984/" target="_blank">
-	   <img src="imgs\f.jpg" width="25" height="25">
+	<i class="fa-brands fa-facebook"></i>
 	 </a>
 	 <a href="https://www.alemupro003@gmail.com/" target="_blank">
-   <img src="imgs\em.jpg" width="25" height="25">
+		<i class="fa-solid fa-envelope"></i>
    </a>
-   <a href="https://www.twiter.com/elemupro003.com/" target="_blank">
-   <img src="imgs\t.jpg" width="25" height="25">
+   <a href="https://twitter.com/alemupro003/" target="_blank">
+	<i class="fa-brands fa-twitter"></i>
    </a>
    <a href="https://www.whatsapp.com/ALEMU PRO.com/0790174049" target="_blank">
-	 <img src="imgs\w.jpg" width="25" height="25">
+	<i class="fa-brands fa-square-whatsapp"></i>
    </a>
    </div>
    </div>
-   
-	   <div class="footer"><h3> copy@right by Alemu pro @2023</h3></div>
+	  
+	   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3985.
+   8906628855502!2d29.76875457331136!3d-2.542514897435827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
+   1!3m3!1m2!1s0x19c312a359302863%3A0x41effa3b6371074c!2sEcole%20Technique%20Saint%20Kizito%20de%20Save!
+   5e0!3m2!1sen!2srw!4v1681814657353!5m2!1sen!2srw" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+   <div class="footer"><h3> copy@right by Alemu pro @2023</h3></div>
 	   </div>
-
 
 </body>
 </html>
