--- a/admin.html
+++ b/admin.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Admin</title>
 	<link href="css/">
-	<link href="css/Admin.css">
+	<link rel="stylesheet" href="css/Admin.css"
 </head>
 <body>
 	<div class="tabs"> 
