--- a/Home.html
+++ b/Home.html
@@ -6,138 +6,105 @@
 	<title>home </title>
 	<link rel="stylesheet" href="css/Home.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-	<style type="text/css">
-		
-		// a{ color:black;
-       text-decoration:none;
-        font-size:2em;
-        padding: 25px;
-      }
-		//.tabs{
-			display: flex;
-			padding-left: 150px;
-			border-radius: 20px;
-		}
-
-		//.bg{
-  background-image: url("img_bg1.jpg");
-  height: 100%; 
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-//.content{
-	padding-left: 40pc;
-}
-//.footer{
-	padding-left: 5pc;
-}
-//.whole{
-	background-color:rgba(212, 211, 211, 0.918);
-      border-radius: 1pc;
-}
-
-//.title{
-	color: blue;
-	font-size: larger;
-	padding-left: 2pc;
 	
-}
-//.other{
-	color: blue;
-	font-size: larger;
-	padding-left: 2pc;
-	
-}
-//.all{
-	background-color:rgba(212, 211, 211, 0.918);
-      border-radius: 0pc;width:300px;height: 200px;
-	  float: right;	
-}
-//.also{
-	background-color:rgba(212, 211, 211, 0.918);
-      border-radius: 0pc;width: 300px;height: 200px;
-	  	
-}
-
 		
-	</style>
 </head>
-<body>
+<body>	
+<div class="container">
+	<div class="tabs">
+		<h3><i class="fa-solid fa-globe"></i>ST KIZITO SAVE T.S.S</h3> 
+		<h4><a href="Home.html">Home</a></h4>
+		<h4><a href="About us.html">About us</a></h4> 
+		<h4><a href="Gallery.html">Gallery</a></p> 
+		<h4><a href="Announcement.html">Announcement</a> </h4>
+		<h4><a href="admin.html">Admin</a></h4><br><br>
+		<div class="search-container">
+		<div class="search">			
+		  <input type="text" placeholder="Search........................." name="search">
+			  <button type="submit"><i class="fa fa-search"></i></button>
+			
+		</div>
+	</div>  		
+</div>
 	
-<div class="tabs"> 
-	<h4><a href="Home.html">Home</a></h4>
-	 <h4><a href="About us.html">About us</a></h4> 
-	 <h4><a href="Gallery.html">Gallery</a></p> 
-	 <h4><a href="Announcement.html">Announcement</a> </h4>
-	 <h4><a href="admin.html">Admin</a></h4><br>
-	 <h3><input type="text" name="search" placeholder="search........">
-  </div>
-  <div class="content">
-	<h1>WELCOME TO SAINT KIZITO SAVE</h1>
-	<h1>TECHNICAL SECONDARY SCHOOL</h1>
-</div>
-<img src="imgs\bg1.jpg" width="1335" height="600"></div>
-  
-  <div class="all">
-  <div class="title">
-  	<h2>Our Missions</h2><br>
-  </div class="miss">
-  	<ul>
-  		<li>Success</li>
-  		<li>Searching</li>
-  		<li>Playing</li>
-  		<li>Innovation</li>
-  	</ul>
-  </div><br>
-</div>
-<div class="also">
-  <div class="other">
-  	<h2>Our Values</h2>
-  </div>
-<div class="values">
-  	<ul>
-  		<li>Displine</li>
-  		<li>Hard working</li>
-  		<li>Nationalism</li>
-  		<li>Respect</li>
-  	</ul>
-  </div>
-</div>
-
-  <div class="whole">
-	<div class="contact">
-		 <h1><I><B>CONTACT US:</B></I></h1>
-	 </div>
-
-
-   <div class="whole">
-	<i class="fa-brands fa-square-whatsapp"></i>07887401227<br><br>
-	<i class="fa-brands fa-facebook"></i>Ecole Technic saint Kizito<br><br>
-	<i class="fa-brands fa-twitter"></i>Ecole Technic saint Kizito<br><br>
-	<i class="fa-solid fa-envelope"></i>stkizitosave@yahoo.fr<br><br><br>
-	 <div class="icons">
-   <a href="https://www.facebook.com/mugabe.alexis.984/" target="_blank">
-	<i class="fa-brands fa-facebook"></i>
-	 </a>
-	 <a href="https://www.alemupro003@gmail.com/" target="_blank">
-		<i class="fa-solid fa-envelope"></i>
-   </a>
-   <a href="https://twitter.com/alemupro003/" target="_blank">
-	<i class="fa-brands fa-twitter"></i>
-   </a>
-   <a href="https://www.whatsapp.com/ALEMU PRO.com/0790174049" target="_blank">
-	<i class="fa-brands fa-square-whatsapp"></i>
-   </a>
-   </div>
-   </div>
-	  
-	   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3985.
-   8906628855502!2d29.76875457331136!3d-2.542514897435827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
-   1!3m3!1m2!1s0x19c312a359302863%3A0x41effa3b6371074c!2sEcole%20Technique%20Saint%20Kizito%20de%20Save!
-   5e0!3m2!1sen!2srw!4v1681814657353!5m2!1sen!2srw" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-   <div class="footer"><h3> copy@right by Alemu pro @2023</h3></div>
+	<div class="content">
+		<h1>WELCOME TO SAINT KIZITO SAVE</h1>
+		<h1>TECHNICAL SECONDARY SCHOOL</h1>
+	</div>
+	<img src="imgs\bg1.jpg">
+	<div class="box">
+		<div class="all">
+			<div class="title">
+				<h2>Our Missions</h2>
+			</div>
+			<ul>
+			<li>Success</li><br>
+			<li>Searching</li><br>
+			<li>Playing</li><br>
+			<li>Innovation</li><br>
+			<li>creativity</li><br>
+			<li>work us team</li><br>
+			</ul>
+		</div>
+		<div class="also">
+			<div class="other">
+				<h2>Our Values</h2>
+			</div>
+			<div class="values">
+				<ul>
+					<li>Displine</li><br>
+					<li>Hard working</li><br>
+					<li>Nationalism</li><br>
+					<li>knowledge</li><br>
+					<li>skills</li><br>
+					<li>time management</li><br>
+				</ul>
+			</div>
+		</div>
+	</div>
+	</div>
+	<div class="whole">
+		<div>
+			<div class="contact">
+				<h1><I><B>CONTACT US:</B></I></h1>
+			 </div>
+			<div>
+				<i class="fa-brands fa-square-whatsapp"></i>07887401227<br><br><br>
+				<i class="fa-brands fa-facebook"></i>Ecole Technic saint Kizito<br><br><br>
+				<i class="fa-brands fa-twitter"></i>Ecole Technic saint Kizito<br><br><br>
+				<i class="fa-solid fa-envelope"></i>stkizitosave@yahoo.fr<br><br><br><br>
+				<i class="fa-solid fa-phone"></i> 0788 846 581<br><br><br><br>
+			</div>
+			<div class="icons">
+				   <a href="https://www.facebook.com/mugabe.alexis.984/" target="_blank">
+					<i class="fa-brands fa-facebook"></i>
+				</a>
+				 <a href="https://www.alemupro003@gmail.com/" target="_blank">
+					<i class="fa-solid fa-envelope"></i>
+				   </a>
+				   <a href="https://twitter.com/alemupro003/" target="_blank">
+					<i class="fa-brands fa-twitter"></i>
+				   </a>
+				<a href="https://www.whatsapp.com/ALEMU PRO.com/0790174049" target="_blank">
+					<i class="fa-brands fa-square-whatsapp"></i>
+				</a>
+				<div class="footer"><p>&copy; copy@right by Alemu pro @2023</p></div>
+		   </div>
+		</div>
+	   <div>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3985.
+			8906628855502!2d29.76875457331136!3d-2.542514897435827!2m3!1f0!2f0!3f0!3m2!
+			1i1024!2i768!4f13.1!3m3!1m2!1s0x19c312a359302863%3A0x41effa3b6371074c!
+			2sEcole%20Technique%20Saint%20Kizito%20de%20Save!5e0!3m2!1sen!2srw!4v1681814657353!5m2!1sen!2srw"
+			 width="600" height="500" style="border:5pc;" 
+			 allowfullscreen="" loading="lazy"
+			  referrerpolicy="no-referrer-when-downgrade"></iframe>
 	   </div>
+	</div>
+	</div>
+</div>
+	  
+	   	
 
 </body>
 </html>
