--- a/Home.html
+++ b/Home.html
@@ -68,12 +68,12 @@
 			<div class="contact">
 				<h1><I><B>CONTACT US:</B></I></h1>
 			 </div>
-			<div>
-				<i class="fa-brands fa-square-whatsapp"></i>07887401227<br><br><br>
+			<div class="magic">
+				<i class="fa-brands fa-square-whatsapp"></i>+250 7887401227<br><br><br>
 				<i class="fa-brands fa-facebook"></i>Ecole Technic saint Kizito<br><br><br>
 				<i class="fa-brands fa-twitter"></i>Ecole Technic saint Kizito<br><br><br>
 				<i class="fa-solid fa-envelope"></i>stkizitosave@yahoo.fr<br><br><br><br>
-				<i class="fa-solid fa-phone"></i> 0788 846 581<br><br><br><br>
+				<i class="fa-solid fa-phone"></i>Tel +250 788 846 581<br><br><br><br>
 			</div>
 			<div class="icons">
 				   <a href="https://www.facebook.com/mugabe.alexis.984/" target="_blank">
