--- a/Gallery.html
+++ b/Gallery.html
@@ -5,102 +5,92 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Gallery</title>
 	<link rel="stylesheet" href="css/Gallery.css">
-	<style type="text/css">
-		
-		//a{ color:black;
-       text-decoration:none;
-        font-size:2em;
-        padding: 25px;
-         }
-
-         
-		//.tabs{
-			display: flex;
-			padding-left: 150px;
-		}
-		//.image{
-			border-radius: 25px;
-		}
-
-         //.content{
-         	padding-left: 42pc;
-         }
-		// .footer{
-			padding-left: 5pc;
-		 }
-		 //.whole{
-      background-color:rgba(212, 211, 211, 0.918);
-      border-radius: 1pc;
-    }
-    .contact{
-      padding-left: 2pc;
-    }
-
-
-		
-	</style>
-</head>
-<body>
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	
-	</div>
-	<div class="tabs"> 
-	<h4><a href="Home.html">Home</a></h4>
-	<h4><a href="About us.html">About us</a></h4> 
-	<h4><a href="Gallery.html">Gallery</a></h4> 
-	<h4><a href="Announcement.html">Announcement</a></h4>
-	<h4><a href="admin.html">Admin</a></h4>
-	<h1>search<input type="text" name="search" placeholder="search here">
-  </div>
-  <img src="imgs\ch.jpg" width="1330" height="600">
-   
-  <div class="content">
-  	<h1>GALLERY</h1>
-  </div>
-  <div class="image">
-	<img src="imgs\xx.png" width="380" height="300">
-	<img src="imgs\10.png" width="380" height="300">
-    <img src="imgs\gg.png" width="380" height="300">
-    <img src="imgs\ss.png" width="380" height="300">
-    <img src="imgs\aa.jpg" width="380" height="300">
-    <img src="imgs\dd.png" width="380" height="300">
-    <img src="imgs\1.png" width="380" height="300">
-    <img src="imgs\5.png" width="380" height="300">
-    <img src="imgs\bb.jpg" width="380" height="300">
-	</div>
+		
+</head>
+<body>	
+<div class="container">
+	<div class="tabs">
+		<h3><i class="fa-solid fa-globe"></i>ST KIZITO SAVE T.S.S</h3> 
+		<h4><a href="Home.html">Home</a></h4>
+		<h4><a href="About us.html">About us</a></h4> 
+		<h4><a href="Gallery.html">Gallery</a></p> 
+		<h4><a href="Announcement.html">Announcement</a> </h4>
+		<h4><a href="admin.html">Admin</a></h4><br><br>
+		<div class="search-container">
+		<div class="search">			
+		  <input type="text" placeholder="Search........................." name="search">
+			  <button type="submit"><i class="fa fa-search"></i></button>
+			
+		</div>
+	</div>  		
+</div>
+	
+<div class="content">
+	<h1>GALLERY</h1>
+</div>
+<div class="way">
+	<img src="imgs\ch.jpg" width="100%" height="100%">
+</div>
+<div class="image">
+	<img src="imgs\xx.png" width="500" height="300">
+	<img src="imgs\10.png" width="410" height="300">
+    <img src="imgs\gg.png" width="410" height="300">
+    <img src="imgs\ss.png" width="500" height="300">
+    <img src="imgs\aa.jpg" width="410" height="300">
+    <img src="imgs\dd.png" width="410" height="300">
+    <img src="imgs\ii.png" width="500" height="300">
+    <img src="imgs\ll.png" width="410" height="300">
+    <img src="imgs\mm.png" width="410" height="300">
+	<img src="imgs\ggg.png" width="500" height="300">
+	<img src="imgs\kk.png" width="410" height="300">
+	<img src="imgs\ee.png" width="410" height="300">
+</div>
+</div>
+
 
 	<div class="whole">
-		<div class="contact">
-			 <h1><I><B>CONTACT US:</B></I></h1>
-		 </div>
-   
-   
-	   <div class="whole">
-	   <img src="imgs\whatsapp.png" width="25" height="25">07887401227<br><br>
-	   <img src="imgs\face.png" width="25" height="25">Ecole Technic saint Kizito<br><br>
-	   <img src="imgs\twiter.png" width="25" height="25">Ecole Technic saint Kizito<br><br>
-	   <img src="C:\Users\DELL\Desktop\website practice\imgs\email.png" width="25" height="25">stkizitosave@yahoo.fr<br><br><br>
-   
-		
-		 <div class="icons">
-	   <a href="https://www.facebook.com/mugabe.alexis.984/" target="_blank">
-		   <img src="imgs\face.png" width="25" height="25">
-		 </a>
-		 <a href="https://www.elemupro003@gmail.com/" target="_blank">
-	   <img src="imgs\email.png" width="25" height="25">
-	   </a>
-	   <a href="https://www.twiter.com/elemupro003.com/" target="_blank">
-	   <img src="imgs\twiter.png" width="25" height="25">
-	   </a>
-	   <a href="https://www.whatsapp.com/ALEMU PRO.com/0790174049" target="_blank">
-		 <img src="imgs\whatsapp.png" width="25" height="25">
-	   </a>
-	   </div>
-	   </div>
-	   
-		   <div class="footer"><h3> copy@right by Alemu pro @2023</h3></div>
+		<div>
+			<div class="contact">
+				<h1><I><B>CONTACT US:</B></I></h1>
+			 </div>
+			<div class="magic">
+				<i class="fa-brands fa-square-whatsapp"></i>+250 7887401227<br><br><br>
+				<i class="fa-brands fa-facebook"></i>Ecole Technic saint Kizito<br><br><br>
+				<i class="fa-brands fa-twitter"></i>Ecole Technic saint Kizito<br><br><br>
+				<i class="fa-solid fa-envelope"></i>stkizitosave@yahoo.fr<br><br><br><br>
+				<i class="fa-solid fa-phone"></i> +250 788 846 581<br><br><br><br>
+			</div>
+			<div class="icons">
+				   <a href="https://www.facebook.com/mugabe.alexis.984/" target="_blank">
+					<i class="fa-brands fa-facebook"></i>
+				</a>
+				 <a href="https://www.alemupro003@gmail.com/" target="_blank">
+					<i class="fa-solid fa-envelope"></i>
+				   </a>
+				   <a href="https://twitter.com/alemupro003/" target="_blank">
+					<i class="fa-brands fa-twitter"></i>
+				   </a>
+				<a href="https://www.whatsapp.com/ALEMU PRO.com/0790174049" target="_blank">
+					<i class="fa-brands fa-square-whatsapp"></i>
+				</a>
+				<div class="footer"><p>&copy; copy@right by Alemu pro @2023</p></div>
 		   </div>
-
+		</div>
+	   <div>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3985.
+			8906628855502!2d29.76875457331136!3d-2.542514897435827!2m3!1f0!2f0!3f0!3m2!
+			1i1024!2i768!4f13.1!3m3!1m2!1s0x19c312a359302863%3A0x41effa3b6371074c!
+			2sEcole%20Technique%20Saint%20Kizito%20de%20Save!5e0!3m2!1sen!2srw!4v1681814657353!5m2!1sen!2srw"
+			 width="600" height="500" style="border:5pc;" 
+			 allowfullscreen="" loading="lazy"
+			  referrerpolicy="no-referrer-when-downgrade"></iframe>
+	   </div>
+	</div>
+	</div>
+</div>
+	  
 
 </body>
 </html>
