--- a/Gallery.html
+++ b/Gallery.html
@@ -33,23 +33,51 @@
 <div class="way">
 	<img src="imgs\ch.jpg" width="100%" height="100%">
 </div>
-<div class="image">
-	<img src="imgs\xx.png" width="500" height="300">
-	<img src="imgs\10.png" width="410" height="300">
-    <img src="imgs\gg.png" width="410" height="300">
-    <img src="imgs\ss.png" width="500" height="300">
-    <img src="imgs\aa.jpg" width="410" height="300">
-    <img src="imgs\dd.png" width="410" height="300">
-    <img src="imgs\ii.png" width="500" height="300">
-    <img src="imgs\ll.png" width="410" height="300">
-    <img src="imgs\mm.png" width="410" height="300">
-	<img src="imgs\ggg.png" width="500" height="300">
-	<img src="imgs\kk.png" width="410" height="300">
-	<img src="imgs\ee.png" width="410" height="300">
+
+<div class="gallery">
+	<div class="single-img small-img">
+		<img src="imgs\aa.jpg" alt="">
+	</div>
+	<div class="single-img medium-img">
+		<img src="imgs\mm.png"alt="">
+	</div>
+	<div class="single-img big-img">
+		<img src= "imgs\xx.png"alt="">
+	</div>
+
+	<div class="single-img small-img">
+		<img src="imgs\ggg.png"alt="">
+	</div>
+	<div class="single-img medium-img">
+		<img src="imgs\kk.png" alt="">
+	</div>
+	<div class="single-img big-img">
+		<img src="imgs\ss.png" alt="">
+	</div>
+
+	<div class="single-img small-img">
+		<img src="imgs\ee.png"alt="">
+	</div>
+	<div class="single-img medium-img">
+		<img src= "imgs\dd.png"alt="">
+	</div>
+	<div class="single-img big-img">
+		<img src= "imgs\ll.png"alt="">
+	</div>
+
+	<div class="single-img small-img">
+		<img src="imgs\oo.jpg" alt="">
+	</div>
+	<div class="single-img medium-img">
+		<img src="imgs\gg.png" alt="">
+	</div>
+	<div class="single-img big-img">
+		<img src="imgs\ii.png" alt="">
+	</div>
 </div>
 </div>
 
-
+  
 	<div class="whole">
 		<div>
 			<div class="contact">
