all changes on every page

--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -16,7 +16,7 @@
             <h3><i class="fa-solid fa-globe"></i>ST KIZITO SAVE T.S.S</h3>
         </div>
         <ul>
-            <li><i class="fa-solid fa-book"></i>&nbsp;Dashboard</li>
+            <li><i class="fa-solid fa-house"></i>&nbsp;Dashboard</li>
             <li><i class="fa-solid fa-book-open-reader"></i>&nbsp;Trainees</li>
             <li><i class="fa-solid fa-person-chalkboard"></i>&nbsp;Trainers</li>
             <li></i><i class="fa-solid fa-hands-holding-child"></i>&nbsp;School staff</li>
@@ -33,7 +33,7 @@
                     <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>   
                 </div>
                 <div class="user">
-                    <!-- <a href="#" class="btn">Add New</a>  -->
+                    <a href="#" class="btn">Add New</a>  
                     <img src="images.png" alt="">
                     <div class="img-case">
                         <img src="download.png" alt="">
