--- a/Gallery.html
+++ b/Gallery.html
@@ -10,7 +10,29 @@
 		
 </head>
 <body>	
-<div class="container">
+	<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa-sharp fa-solid fa-arrow-up"></i><br>Back to Top</button>
+	<script>
+		// Get the button
+		let mybutton = document.getElementById("myBtn");
+		
+		// When the user scrolls down 20px from the top of the document, show the button
+		window.onscroll = function() {scrollFunction()};
+		
+		function scrollFunction() {
+		  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+			mybutton.style.display = "block";
+		  } else {
+			mybutton.style.display = "none";
+		  }
+		}
+		
+		// When the user clicks on the button, scroll to the top of the document
+		function topFunction() {
+		  document.body.scrollTop = 0;
+		  document.documentElement.scrollTop = 0;
+		}
+		</script>	
+<div class="container1">
 	<div class="tabs">
 		<h3><i class="fa-solid fa-globe"></i>ST KIZITO SAVE T.S.S</h3> 
 		<h4><a href="Home.html">Home</a></h4>
@@ -20,7 +42,7 @@
 		<h4><a href="admin.html">Admin</a></h4><br><br>
 		<div class="search-container">
 		<div class="search">			
-		  <input type="text" placeholder="Search........................." name="search">
+		  <input type="text" placeholder="Searching........................." name="search">
 			  <button type="submit"><i class="fa fa-search"></i></button>
 			
 		</div>
@@ -31,53 +53,67 @@
 	<h1>GALLERY</h1>
 </div>
 <div class="way">
-	<img src="imgs\ch.jpg" width="100%" height="100%">
+	<img src="imgs\me.png" width="100%" height="100%">
 </div>
-
-<div class="gallery">
-	<div class="single-img small-img">
-		<img src="imgs\aa.jpg" alt="">
+<div class="container">
+	<div class="card-container">
+	 <!--Card 1-->
+	 <div class="card">
+	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-1.jpg);"></div>
+	 </div>
+	 <!--Card 2-->
+	 <div class="card">
+	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-2.jpg);"></div>
+	 </div>
+	 <!--Card 3-->
+	 <div class="card">
+	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-3.jpg);"></div>
+	 </div>
+	 <!--Card 4-->
+	 <div class="card">
+	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-4.jpg);"></div>
+	 </div>
+	 <!--Card 5-->
+	 <div class="card">
+	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-5.jpg);"></div>
+	 </div>
+	 <!--Card 6-->
+	 <div class="card">
+	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-6.jpg);"></div>
+	 </div>
 	</div>
-	<div class="single-img medium-img">
-		<img src="imgs\mm.png"alt="">
+   </div>
+   <div class="container">
+	<div class="card-container">
+	 <!--Card 1-->
+	 <div class="card">
+	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-1.jpg);"></div>
+	 </div>
+	 <!--Card 2-->
+	 <div class="card">
+	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-2.jpg);"></div>
+	 </div>
+	 <!--Card 3-->
+	 <div class="card">
+	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-3.jpg);"></div>
+	 </div>
+	 <!--Card 4-->
+	 <div class="card">
+	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-4.jpg);"></div>
+	 </div>
+	 <!--Card 5-->
+	 <div class="card">
+	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-5.jpg);"></div>
+	 </div>
+	 <!--Card 6-->
+	 <div class="card">
+	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-6.jpg);"></div>
+	 </div>
 	</div>
-	<div class="single-img big-img">
-		<img src= "imgs\xx.png"alt="">
-	</div>
-
-	<div class="single-img small-img">
-		<img src="imgs\ggg.png"alt="">
-	</div>
-	<div class="single-img medium-img">
-		<img src="imgs\kk.png" alt="">
-	</div>
-	<div class="single-img big-img">
-		<img src="imgs\ss.png" alt="">
-	</div>
-
-	<div class="single-img small-img">
-		<img src="imgs\ee.png"alt="">
-	</div>
-	<div class="single-img medium-img">
-		<img src= "imgs\dd.png"alt="">
-	</div>
-	<div class="single-img big-img">
-		<img src= "imgs\ll.png"alt="">
-	</div>
-
-	<div class="single-img small-img">
-		<img src="imgs\oo.jpg" alt="">
-	</div>
-	<div class="single-img medium-img">
-		<img src="imgs\gg.png" alt="">
-	</div>
-	<div class="single-img big-img">
-		<img src="imgs\ii.png" alt="">
-	</div>
-</div>
-</div>
+   </div>
 
   
+   
 	<div class="whole">
 		<div>
 			<div class="contact">
