--- a/admin.html
+++ b/admin.html
@@ -9,6 +9,25 @@
   
 </head>
 <body>
+	<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa-sharp fa-solid fa-arrow-up"></i><br>Back to Top</button>
+	<script>
+		let mybutton = document.getElementById("myBtn");
+		window.onscroll = function() {scrollFunction()};
+		
+		function scrollFunction() {
+		  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+			mybutton.style.display = "block";
+		  } else {
+			mybutton.style.display = "none";
+		  }
+		}
+		
+		function topFunction() {
+		  document.body.scrollTop = 0;
+		  document.documentElement.scrollTop = 0;
+		}
+		</script>
+		
   <div class="container">
     <div class="tabs">
       <h3><i class="fa-solid fa-globe"></i>ST KIZITO SAVE T.S.S</h3>  
@@ -19,29 +38,31 @@
       <h4><a href="admin.html">Admin</a></h4><br><br>
       <div class="search-container">
       <div class="search">			
-        <input type="text" placeholder="Search........................." name="search">
+        <input type="text" placeholder="Searching........................." name="search">
           <button type="submit"><i class="fa fa-search"></i></button>
         
       </div>
     </div>  		
   </div>
 
-  <div class="content">
+  <div class="content">  
   	<h1>ADMIN</h1>
   </div>
   <div class="now">
-    <img src="imgs\gad.jpg" width="100%" height="100%">
+    <img src="imgs\me.png" width="100%" height="100%">
   </div>
   <div class="rightcontent">
 	<form action="#" method="post">
 		<b><h5> Login Here</h5></b>
 		<input type="text" name="user_name" placeholder="Enter Username here" id="un"required><br><br>
-		<input type="password" name="password" placeholder="Entre Password here" id="up"required><br><br>
+		<input type="password" name="password" placeholder="Enter Password here" id="up"required><br><br>
 		<input type="submit" name="login" value="log in" id="lo">
 		<input type="reset" name="cancel" value="cancel">
 	</form>
 </div>
- 			
+<div class="cover">
+    <img src="imgs\fr.png" width="100%" height="100%">
+  </div>		
 
 
 	 <div class="whole">
