--- a/Gallery.html
+++ b/Gallery.html
@@ -12,10 +12,10 @@
 <body>	
 	<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa-sharp fa-solid fa-arrow-up"></i><br>Back to Top</button>
 	<script>
-		// Get the button
+	
 		let mybutton = document.getElementById("myBtn");
 		
-		// When the user scrolls down 20px from the top of the document, show the button
+		
 		window.onscroll = function() {scrollFunction()};
 		
 		function scrollFunction() {
@@ -26,7 +26,7 @@
 		  }
 		}
 		
-		// When the user clicks on the button, scroll to the top of the document
+		
 		function topFunction() {
 		  document.body.scrollTop = 0;
 		  document.documentElement.scrollTop = 0;
@@ -37,14 +37,15 @@
 		<h3><i class="fa-solid fa-globe"></i>ST KIZITO SAVE T.S.S</h3> 
 		<h4><a href="Home.html">Home</a></h4>
 		<h4><a href="About us.html">About us</a></h4> 
-		<h4><a href="Gallery.html">Gallery</a></p> 
-		<h4><a href="Announcement.html">Announcement</a> </h4>
+		<h4><a href="Gallery.html">Galleries</a></p> 
+		<h4><a href="Announcement.html">Announcements</a> </h4>
 		<h4><a href="admin.html">Admin</a></h4><br><br>
 		<div class="search-container">
-		<div class="search">			
-		  <input type="text" placeholder="Searching........................." name="search">
-			  <button type="submit"><i class="fa fa-search"></i></button>
-			
+			<form action="/action_page.php">
+				<div class="search">			
+		  		<input type="text" placeholder="Searching........................." name="search">
+			  	<button type="submit"><i class="fa fa-search"></i></button>
+			</form>
 		</div>
 	</div>  		
 </div>
@@ -57,27 +58,27 @@
 </div>
 <div class="container">
 	<div class="card-container">
-	 <!--Card 1-->
+	 
 	 <div class="card">
 	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-1.jpg);"></div>
 	 </div>
-	 <!--Card 2-->
+	 
 	 <div class="card">
 	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-2.jpg);"></div>
 	 </div>
-	 <!--Card 3-->
+	
 	 <div class="card">
 	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-3.jpg);"></div>
 	 </div>
-	 <!--Card 4-->
+	 
 	 <div class="card">
 	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-4.jpg);"></div>
 	 </div>
-	 <!--Card 5-->
+	 
 	 <div class="card">
 	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-5.jpg);"></div>
 	 </div>
-	 <!--Card 6-->
+	
 	 <div class="card">
 	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-6.jpg);"></div>
 	 </div>
@@ -85,27 +86,27 @@
    </div>
    <div class="container">
 	<div class="card-container">
-	 <!--Card 1-->
+	 
 	 <div class="card">
 	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-1.jpg);"></div>
 	 </div>
-	 <!--Card 2-->
+	 
 	 <div class="card">
 	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-2.jpg);"></div>
 	 </div>
-	 <!--Card 3-->
+	 
 	 <div class="card">
 	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-3.jpg);"></div>
 	 </div>
-	 <!--Card 4-->
+	 
 	 <div class="card">
 	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-4.jpg);"></div>
 	 </div>
-	 <!--Card 5-->
+	 
 	 <div class="card">
 	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-5.jpg);"></div>
 	 </div>
-	 <!--Card 6-->
+	 
 	 <div class="card">
 	  <div class="card-image" style="background-image: url(https://cdn.shopify.com/s/files/1/0710/8303/2860/files/gallery-images-6.jpg);"></div>
 	 </div>
