--- a/admin.html
+++ b/admin.html
@@ -33,15 +33,16 @@
       <h3><i class="fa-solid fa-globe"></i>ST KIZITO SAVE T.S.S</h3>  
       <h4><a href="Home.html">Home</a></h4>
       <h4><a href="About us.html">About us</a></h4> 
-      <h4><a href="Gallery.html">Gallery</a></p> 
-      <h4><a href="Announcement.html">Announcement</a> </h4>
+      <h4><a href="Gallery.html">Galleries</a></p> 
+      <h4><a href="Announcement.html">Announcements</a> </h4>
       <h4><a href="admin.html">Admin</a></h4><br><br>
       <div class="search-container">
-      <div class="search">			
-        <input type="text" placeholder="Searching........................." name="search">
-          <button type="submit"><i class="fa fa-search"></i></button>
-        
-      </div>
+		<form action="login_sample_db.php">
+			<div class="search">			
+			  <input type="text" placeholder="Searching........................." name="search">
+			  <button type="submit"><i class="fa fa-search"></i></button>
+		</form>
+	</div>
     </div>  		
   </div>
 
