--- a/Announcement.html
+++ b/Announcement.html
@@ -9,10 +9,7 @@
 <body>
 	<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa-sharp fa-solid fa-arrow-up"></i><br>Back to Top</button>
 	<script>
-		// Get the button
 		let mybutton = document.getElementById("myBtn");
-		
-		// When the user scrolls down 20px from the top of the document, show the button
 		window.onscroll = function() {scrollFunction()};
 		
 		function scrollFunction() {
@@ -22,8 +19,6 @@
 			mybutton.style.display = "none";
 		  }
 		}
-		
-		// When the user clicks on the button, scroll to the top of the document
 		function topFunction() {
 		  document.body.scrollTop = 0;
 		  document.documentElement.scrollTop = 0;
@@ -35,15 +30,16 @@
       <h3><i class="fa-solid fa-globe"></i>ST KIZITO SAVE T.S.S</h3>  
       <h4><a href="Home.html">Home</a></h4>
       <h4><a href="About us.html">About us</a></h4> 
-      <h4><a href="Gallery.html">Gallery</a></p> 
-      <h4><a href="Announcement.html">Announcement</a> </h4>
+      <h4><a href="Gallery.html">Galleries</a></p> 
+      <h4><a href="Announcement.html">Announcements</a> </h4>
       <h4><a href="admin.html">Admin</a></h4><br><br>
       <div class="search-container">
-      <div class="search">			
-        <input type="text" placeholder="Searching........................." name="search">
-          <button type="submit"><i class="fa fa-search"></i></button>
-        
-      </div>
+		<form action="/action_page.php">
+			<div class="search">			
+			  <input type="text" placeholder="Searching........................." name="search">
+			  <button type="submit"><i class="fa fa-search"></i></button>
+		</form>
+	</div>
     </div>  		
   </div>
 
