--- a/Home.html
+++ b/Home.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>home </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link rel="stylesheet" href="css/Home.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+	<link rel="icon" href="icon.png" type="image/x-icon">
 	
 		
 </head>
@@ -15,7 +14,7 @@
 	
 		let mybutton = document.getElementById("myBtn");
 		
-	
+		
 		window.onscroll = function() {scrollFunction()};
 		
 		function scrollFunction() {
@@ -26,26 +25,27 @@
 		  }
 		}
 		
-
+	
 		function topFunction() {
 		  document.body.scrollTop = 0;
 		  document.documentElement.scrollTop = 0;
 		}
-		</script>
+	</script>
 
 <div class="container">
 	<div class="tabs">
 		<h3><i class="fa-solid fa-globe"></i>ST KIZITO SAVE T.S.S</h3> 
 		<h4><a href="Home.html">Home</a></h4>
 		<h4><a href="About us.html">About us</a></h4> 
-		<h4><a href="Gallery.html">Gallery</a></p> 
-		<h4><a href="Announcement.html">Announcement</a> </h4>
+		<h4><a href="Gallery.html">Galleries</a></p> 
+		<h4><a href="Announcement.html">Announcements</a> </h4>
 		<h4><a href="admin.html">Admin</a></h4><br><br>
 		<div class="search-container">
-		<div class="search">			
-		  <input type="text" placeholder="Searching........................." name="search">
-			  <button type="submit"><i class="fa fa-search"></i></button>
-			
+			<form action="/action_page.php">
+				<div class="search">			
+		  		<input type="text" placeholder="Searching........................." name="search">
+			  	<button type="submit"><i class="fa fa-search"></i></button>
+			</form>
 		</div>
 	</div>  		
 </div>
@@ -53,6 +53,7 @@
 	<div class="content">
 		<h1>WELCOME TO SAINT KIZITO SAVE</h1>
 		<h1>TECHNICAL SECONDARY SCHOOL</h1>
+		<marquee>"Skills for a better destiny"</marquee>
 	</div>
 	<div class="tee">
 		<img src="imgs\fr.png" height="100%" width="100%">
@@ -66,9 +67,9 @@
 				Success&nbsp;&nbsp;<i class="fa-solid fa-check"></i><br><br>
 				Searching&nbsp;<i class="fa-solid fa-magnifying-glass"></i><br><br>
 				Praying&nbsp;<i class="fa-solid fa-person-praying"></i><br><br>
-			Innovation&nbsp;<i class="fa-solid fa-check"></i><br><br>
-			creativity&nbsp;<i class="fa-solid fa-check"></i><br><br>
-			work us team&nbsp;<i class="fa-solid fa-thumbs-up"></i><br><br>
+				Innovation&nbsp;<i class="fa-solid fa-check"></i><br><br>
+				creativity&nbsp;<i class="fa-solid fa-check"></i><br><br>
+				work us team&nbsp;<i class="fa-solid fa-thumbs-up"></i><br><br>
 			</ul>
 		</div>
 		<div class="also">
